--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Regan Little</title>
+    <link
+      rel="preload"
+      as="image"
+      href="/images/header/regan-little-900.png"
+      media="(min-width: 768px)"
+      imagesizes="(max-width: 1199px) 650px, 900px"
+      imagesrcset="/images/header/regan-little-900.webp 900w, /images/header/regan-little-1800.webp 1800w"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
